sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:6: error: illegal start of simple pattern
  for(var i=0 to nbVal-2){
      ^AlgSelectionSort:16: error: '<-' expected but '}' found.
} 
^