sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  
  var nbVal=getNombreValeurs()
  
  for(var i=0 to nbVal-2){
    var min=i
    for(var j=i to nbVal-1){
      if(plusPetit(j,min)){
        min=j
      }
    }
    echange(i,min)
  }
  
}